# hexcalc

./: .gitignore  BUILD.gn  README.md  hexcalc.iss
assets/: Readme.txt
src/: converters.cc  converters.h  framework.h  globals.h  hexcalc.rc  main.cc  main.h  resource.h  utils.cc  utils.h  version.h
src/logging/: BUILD.gn  logging_base.h
src/res/: hexcalc.manifest
